--- a/src/Components/Generic/Cards/DetailedCard.scss
+++ b/src/Components/Generic/Cards/DetailedCard.scss
@@ -15,14 +15,6 @@
     align-items: center;
 
     span {
-      $red: #f37272;
-      $brown: #584e4a;
-      $whitey: #f0f0f0;
-
-      $duration: 0.2s;
-      $distance: 8px;
-      $easeOutBack: cubic-bezier(0.175, 0.885, 0.32, 1.275);
-
       font-family: Barlow;
       font-style: normal;
       font-weight: 600;
@@ -147,6 +139,14 @@
 
     img {
       color: inherit;
+    }
+  }
+
+  .attend {
+    background: $Purple-1;
+    &:hover {
+      cursor: pointer;
+      background: $Purple-1b;
     }
   }
 }
