--- a/static/styles/globals.scss
+++ b/static/styles/globals.scss
@@ -21,6 +21,9 @@ $Yellow-2: #fbbc05;
 $Yellow-3: #e2d245;
 $Yellow-10: #ff9c44;
 
+$Purple-1: #8322aa;
+$Purple-1b: #6e1d8f;
+
 $Black-1: #3f3e3e;
 
 // Gradients
