--- a/static/styles/globals.scss
+++ b/static/styles/globals.scss
@@ -62,6 +62,16 @@ $shadow-2: 10px 10px 20px rgba(0, 0, 0, 0.342);
   color: #000000;
 }
 
+%heading-2 {
+  font-family: Scope One;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 28px;
+  line-height: 50px;
+
+  color: #000000;
+}
+
 // font
 
 %BtnFont-1 {
