--- a/src/Components/Generic/Cards/ModuleCard.scss
+++ b/src/Components/Generic/Cards/ModuleCard.scss
@@ -182,9 +182,9 @@
     align-items: center;
 
     span {
-      font-family: Lato;
+      font-family: Scope One;
       font-style: normal;
-      font-weight: normal;
+      font-weight: 900;
       font-size: 28px;
       line-height: 38px;
 
@@ -217,10 +217,20 @@
     padding-left: 2rem;
   }
 
-  .lessonsBox {
+  .itemBox {
     margin: 2rem 1rem 2rem 1rem;
 
-    .lessonsList {
+    .title {
+      font-family: Lato;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 24px;
+      line-height: 38px;
+
+      color: #ffffff;
+    }
+
+    .itemList {
       // flex-grow: 4;
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
@@ -246,7 +256,7 @@
   background: $grad-7;
 }
 
-.createLessonBtn {
+.createBtn {
   width: 300px;
   height: 160px;
   background: #000000ad;
@@ -283,20 +293,23 @@
       transform: scale(0.85);
     }
   }
+}
 
-  // span {
-  //   position: relative;
-  //   width: 252px;
-  //   height: 38px;
-  //   top: -4rem;
-  //   left: 2rem;
+.createAssignmentBtn {
+  background: #ffffff7e;
 
-  //   font-family: Barlow;
-  //   font-style: normal;
-  //   font-weight: 600;
-  //   font-size: 16px;
-  //   line-height: 19px;
+  span {
+    color: $Black-1;
+  }
 
-  //   color: #ececec;
-  // }
+  &:hover {
+    cursor: pointer;
+    box-shadow: $shadow-1;
+    background: #ffffffbe;
+
+    color: #000000;
+    img {
+      transform: scale(0.85);
+    }
+  }
 }
