--- a/src/Components/Generic/Cards/ModuleCard.scss
+++ b/src/Components/Generic/Cards/ModuleCard.scss
@@ -32,7 +32,7 @@
 .actionBar {
   display: flex;
   flex-direction: row-reverse;
-  margin-top: 2rem;
+  margin: 1rem 0 1rem 0;
 
   button {
     margin-left: 1rem;
