--- a/src/Components/Generic/Cards/AssignmentCard.scss
+++ b/src/Components/Generic/Cards/AssignmentCard.scss
@@ -5,10 +5,17 @@
   background: #ffffff;
   padding: 1rem 2rem 1rem 2rem;
   border-radius: 5px;
+  border: 1px solid #dfdfdf;
 
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  transition: transform 0.1s ease;
+  &:hover {
+    cursor: pointer;
+    box-shadow: $shadow-2;
+    transform: scale(1.05);
+  }
 
   span {
     font-family: Lato;
@@ -30,6 +37,7 @@
       border-radius: 10px;
       padding: 0 1rem 0 1rem;
       text-align: center;
+      padding-top: 0.3rem;
       .value {
         font-family: Barlow;
         font-style: normal;
