--- a/src/Components/Generic/Cards/AssignmentCard.scss
+++ b/src/Components/Generic/Cards/AssignmentCard.scss
@@ -3,7 +3,9 @@
   width: 300px;
   height: 160px;
   background: #ffffff;
+
   padding: 1rem 2rem 1rem 2rem;
+
   border-radius: 5px;
   border: 1px solid #dfdfdf;
 
@@ -12,9 +14,8 @@
   justify-content: space-between;
   transition: transform 0.1s ease;
   &:hover {
-    cursor: pointer;
     box-shadow: $shadow-2;
-    transform: scale(1.05);
+    // transform: scale(1.05);
   }
 
   span {
@@ -23,21 +24,20 @@
     font-weight: lighter;
     font-size: 20px;
     line-height: 24px;
-
     color: $Black-1;
   }
 
-  .creds {
+  .actionBox {
     display: flex;
     flex-direction: row-reverse;
+    place-content: space-between;
 
-    .box {
+    .creds {
       border: 1px solid #ececec;
       background: #e6e6e6;
       border-radius: 10px;
-      padding: 0 1rem 0 1rem;
+      padding: 0 0.5rem 0 0.5rem;
       text-align: center;
-      padding-top: 0.3rem;
       .value {
         font-family: Barlow;
         font-style: normal;
@@ -55,6 +55,54 @@
         line-height: 29px;
 
         color: #e47a23;
+      }
+    }
+
+    .editBar {
+      align-self: flex-end;
+      // margin-right: 1rem;
+
+      button {
+        height: 40px;
+        border-radius: 5px;
+        border: 0px;
+        margin-left: 0.5rem;
+      }
+
+      .edit {
+        background: #0037cf;
+        transition: transform 0.1s ease;
+
+        &:hover {
+          cursor: pointer;
+          background: #1f3d8f;
+          img {
+            transform: scale(1.3);
+          }
+        }
+      }
+
+      .delete {
+        background: #cf002d;
+        transition: transform 0.1s ease;
+
+        &:hover {
+          cursor: pointer;
+          background: #f31f4d;
+          img {
+            transform: scale(1.3);
+          }
+        }
+      }
+
+      .fullscreen {
+        background: transparent;
+        padding: 0px;
+        transition: transform 0.1s ease;
+        &:hover {
+          cursor: pointer;
+          transform: scale(1.3);
+        }
       }
     }
   }
