--- a/src/Components/Generic/Cards/LessonCard.scss
+++ b/src/Components/Generic/Cards/LessonCard.scss
@@ -1,7 +1,9 @@
 .lessonCard {
   width: 300px;
-  height: 160px;
+  height: 210px;
   background: #000000;
+
+  border-radius: 5px;
 
   .lesson {
     width: 300px;
@@ -27,5 +29,61 @@
     line-height: 19px;
 
     color: #ececec;
+  }
+}
+
+.actionBox {
+  display: flex;
+  flex-direction: row-reverse;
+  place-content: space-between;
+  margin-top: 5px;
+  margin-right: 1rem;
+
+  .editBar {
+    align-self: center;
+    // margin-right: 1rem;
+
+    button {
+      height: 40px;
+      border-radius: 5px;
+      border: 0px;
+      margin-left: 0.5rem;
+    }
+
+    .edit {
+      background: #0037cf;
+      transition: transform 0.1s ease;
+
+      &:hover {
+        cursor: pointer;
+        background: #1f3d8f;
+        img {
+          transform: scale(1.3);
+        }
+      }
+    }
+
+    .delete {
+      background: #cf002d;
+      transition: transform 0.1s ease;
+
+      &:hover {
+        cursor: pointer;
+        background: #f31f4d;
+        img {
+          transform: scale(1.3);
+        }
+      }
+    }
+
+    .fullscreen {
+      background: transparent;
+      padding: 0px;
+      transition: transform 0.1s ease;
+      &:hover {
+        cursor: pointer;
+        transform: scale(1.3);
+      }
+    }
   }
 }
